<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_short">ASL</string>
    <string name="app_name">AcropolisStudentLog</string>
    <string name="title_section1">TIMETABLE</string>
    <string name="title_section2">SUBJECTS</string>
    <string name="title_section3">ABOUT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="set_default_class">Set Default Class</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="classes">
        <item>CS-1 2nd yr</item>
        <item>CS-2 2nd yr</item>
        <item>@string/class_cs3</item>
    </string-array>

    <string name="class_cs3">CS-3 2nd yr</string>


    <string name="period1">period1</string>
    <string name="period4_break">LUNCH BREAK</string>
    <string name="selec_Sub">Select Subject </string>
    <string name="show_all_batches">Display only default Batch</string>
    <string name="timetable_setting_1">Show only your default selected batch in Timetable</string>

    <string name="timeslot1">10:40</string>
    <string name="timeslot2">11:30</string>
    <string name="timeslot3">12:20</string>
    <string name="timeslot4">01:10</string>
    <string name="timeslot5">02:00</string>
    <string name="timeslot6">02:50</string>
    <string name="timeslot7">03:40</string>
    <string name="timeslot8">04:30</string>

    <string name="guide">SHOW GUIDE</string>
    <string name="guide1">\nPractical period ORDER: B1/B2/B3\n\nM-3 : MATHEMATICS III -  BE-401\n\nCSO : COMPUTER SYSTEM ORGANIZATION - CS-402\n\nOOT: OBJECT ORIENTED TECHNOLOGY– CS-403\n\n
    ADA : ANALYSIS and DESIGN OF ALGORITHM – CS-404\n\n
    .NET : COMPUTER PROGRAMMING – CS-406\n\n
    GD : GROUP DISCUSSION/SEMINAR – CS-408\n\n
    CDC - CAREER DEVELOPMENT CELL/TRAINING AND PLACEMENT</string>

    <string-array name="subjects">
        <item>M-III</item>
        <item>CSO</item>
        <item>ADA</item>
        <item>OOT</item>
        <item>ADC</item>
        <item>.NET</item>
    </string-array>

    <string name="batch2">B2</string>
    <string name="preference_file_key">com.sid.asl_take3.PREFERENCE_FILE_KEY</string>

    <string-array name="batches">
        <item>B1</item>
        <item>@string/batch2</item>
        <item>B3</item>
    </string-array>

    <string name="set_default_batch">Set Default Batch</string>
    <string name="timetable_settings">TIMETABLE SETTINGS</string>

    <string name="version_title">version</string>
    <string name="version">1.4.1</string>
    <string name="author_title">author</string>
    <string name="author">Siddharth Sharma\nAITR\nCS-3 2ndyr.</string>
    <string name="contributors_title">contributors</string>
    <string name="contributors">Vinay Pawar CS-3 2nd yr\n\nAbhilash Mishra IT 3rd yr\n\nSiddharth Yadav CS-3 2nd yr(App Icon)</string>

    <string name="projectsource_title">projectsource</string>
    <string name="projectsource">Full source at github.com/thegreyd/asl_final\n\nThis Project is completely Open Source and uses openly available libraries (SQLiteAssetHelper).\n
    The information used here is publicly available, through rgpv.ac.in and others.\n
        </string>
    <string name="feedback_title">feedback / suggestions / bugs</string>
    <string name="feedback">Your feedback is important!\nGive it at sid.sharma0@gmail.com</string>

    <string name="update_title">update</string>
    <string name="update">Check for update at the project source link below.</string>







</resources>
