<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sid.asl_take3.MainActivity$PlaceholderFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:id="@+id/selectclassspinner"
                    android:entries="@array/classes"
                    android:spinnerMode="dropdown"
                    android:layout_weight="2"
                    android:layout_marginLeft="10dp"/>

                <Spinner
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:id="@+id/selectdayspinner2"
                    android:entries="@array/days"
                    android:layout_marginLeft="10dp"
                    android:spinnerMode="dropdown"
                    android:layout_weight="2"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="30dp">
                <TextView

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="@string/timeslot1"
                    android:layout_weight="1"
                    android:id="@+id/time1"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center" />

                <TextView

                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:text="@string/period1"
                    android:layout_weight="2"
                    android:id="@+id/period1"
                    android:textSize="20sp"
                    android:gravity="center" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeslot2"
                    android:layout_weight="1"
                    android:id="@+id/time2"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/period1"
                    android:layout_weight="2"
                    android:id="@+id/period2"
                    android:textSize="20sp"
                    android:gravity="center" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeslot3"
                    android:layout_weight="1"
                    android:id="@+id/time3"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/period1"
                    android:layout_weight="2"
                    android:id="@+id/period3"
                    android:textSize="20sp"
                    android:gravity="center" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/buff">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeslot4"
                    android:layout_weight="1"
                    android:id="@+id/time4"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/period4_break"
                    android:layout_weight="2"
                    android:id="@+id/period4"
                    android:textSize="15sp"
                    android:gravity="center" />

            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeslot5"
                    android:layout_weight="1"
                    android:id="@+id/time5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/period1"
                    android:layout_weight="2"
                    android:id="@+id/period5"
                    android:textSize="20sp"
                    android:gravity="center" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeslot6"
                    android:layout_weight="1"
                    android:id="@+id/time6"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/period1"
                    android:layout_weight="2"
                    android:id="@+id/period6"
                    android:textSize="20sp"
                    android:gravity="center" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeslot7"
                    android:layout_weight="1"
                    android:id="@+id/time7"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/period1"
                    android:layout_weight="2"
                    android:id="@+id/period7"
                    android:textSize="20sp"
                    android:gravity="center" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/timeslot8"
                    android:layout_weight="1"
                    android:id="@+id/time8"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/period1"
                    android:layout_weight="2"
                    android:id="@+id/period8"
                    android:textSize="20sp"
                    android:gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:background="@color/antiquewhite"
                android:layout_marginTop="30dp"
                >

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/guide"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:clickable="true"
                    android:id="@+id/guide"
                    android:padding="5dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/guide1"
                    android:visibility="gone"
                    android:padding="5dp"
                    android:text="@string/guide1"/>

            </TableRow>




        </LinearLayout>


    </ScrollView>



</LinearLayout>
